; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_r8a66597-hcd.c_enable_pipe_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_r8a66597-hcd.c_enable_pipe_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.r8a66597 = type { i32 }

@INTENB0 = common dso_local global i32 0, align 4
@BEMPE = common dso_local global i32 0, align 4
@NRDYE = common dso_local global i32 0, align 4
@BRDYE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.r8a66597*, i32, i64)* @enable_pipe_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @enable_pipe_irq(%struct.r8a66597* %0, i32 %1, i64 %2) #0 {
  %4 = alloca %struct.r8a66597*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.r8a66597* %0, %struct.r8a66597** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %8 = load %struct.r8a66597*, %struct.r8a66597** %4, align 8
  %9 = load i32, i32* @INTENB0, align 4
  %10 = call i32 @r8a66597_read(%struct.r8a66597* %8, i32 %9)
  store i32 %10, i32* %7, align 4
  %11 = load %struct.r8a66597*, %struct.r8a66597** %4, align 8
  %12 = load i32, i32* @BEMPE, align 4
  %13 = load i32, i32* @NRDYE, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* @BRDYE, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @INTENB0, align 4
  %18 = call i32 @r8a66597_bclr(%struct.r8a66597* %11, i32 %16, i32 %17)
  %19 = load %struct.r8a66597*, %struct.r8a66597** %4, align 8
  %20 = load i32, i32* %5, align 4
  %21 = shl i32 1, %20
  %22 = load i64, i64* %6, align 8
  %23 = call i32 @r8a66597_bset(%struct.r8a66597* %19, i32 %21, i64 %22)
  %24 = load %struct.r8a66597*, %struct.r8a66597** %4, align 8
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* @INTENB0, align 4
  %27 = call i32 @r8a66597_write(%struct.r8a66597* %24, i32 %25, i32 %26)
  ret void
}

declare dso_local i32 @r8a66597_read(%struct.r8a66597*, i32) #1

declare dso_local i32 @r8a66597_bclr(%struct.r8a66597*, i32, i32) #1

declare dso_local i32 @r8a66597_bset(%struct.r8a66597*, i32, i64) #1

declare dso_local i32 @r8a66597_write(%struct.r8a66597*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
